--- a/sysutils/crashme/Makefile
+++ b/sysutils/crashme/Makefile
@@ -3,7 +3,7 @@
 # Date created:				Fri Nov 14 08:39:08 GMT 1997
 # Whom:					Alistair Crooks (agc@netbsd.org)
 #
-# $NetBSD: Makefile,v 1.1.1.1 1997/11/14 10:04:47 agc Exp $
+# $NetBSD: Makefile,v 1.2 1998/01/24 23:29:30 hubertf Exp $
 #
 
 DISTNAME=       	crashme-2.4
@@ -14,7 +14,7 @@ EXTRACT_SUFX=		-shar
 MAINTAINER=		agc@netbsd.org
 
 NO_WRKSUBDIR=		yes
-EXTRACT_CMD=		cat
+EXTRACT_CMD=		${CAT}
 EXTRACT_BEFORE_ARGS=
 EXTRACT_AFTER_ARGS=	|sh
 MAKEFILE=		makefile
