--- a/sysutils/rtty/Makefile
+++ b/sysutils/rtty/Makefile
@@ -5,7 +5,7 @@
 #
 # Author:		Paul Vixie / Internet Software Consortium
 #
-# $NetBSD: Makefile,v 1.3 1997/10/29 11:28:00 agc Exp $
+# $NetBSD: Makefile,v 1.4 1998/01/24 23:33:13 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.3 1997/01/06 12:13:36 jkh Exp
 #
 
@@ -13,14 +13,16 @@ DISTNAME=       rtty-3.2
 CATEGORIES=	sysutils
 MASTER_SITES=   ftp://ftp.vix.com/pub/vixie/
 
-NO_WRKSUBDIR=   yes     
+MAINTAINER=	packages@netbsd.org
+
+NO_WRKSUBDIR=   yes
 
 OPSYS!=		uname -s
- 
+
 .if (${OPSYS} == "NetBSD")
 pre-configure:
-	for f in `find ${WRKDIR} -type f -print|xargs grep -l '/usr/local'`; do \
-		${SED} -e 's:/usr/local:'${PREFIX}':g' < $$f > $$f.pdone && mv $$f.pdone $$f; \
+	for f in `find ${WRKDIR} -type f -print|xargs ${GREP} -l '/usr/local'`; do \
+		${SED} -e 's:/usr/local:'${PREFIX}':g' < $$f > $$f.pdone && ${MV} $$f.pdone $$f; \
 	done
 .endif
 
