--- a/sysutils/xosview/Makefile
+++ b/sysutils/xosview/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.5 1997/12/09 04:50:16 agc Exp $
 # New ports collection makefile for:    xosview
 # Version required:     		1.5.1
 # Date created:         		Fri Oct 24 10:03:55 BST 1997
 # Whom:                 		Alistair Crooks (agc@netbsd.org)
+#
+# $NetBSD: Makefile,v 1.6 1998/01/24 23:35:43 hubertf Exp $
 #
 
 DISTNAME=       xosview-1.5.1
