--- a/x11/ctwm/Makefile
+++ b/x11/ctwm/Makefile
@@ -1,18 +1,20 @@
-# $NetBSD: Makefile,v 1.2 1997/12/20 11:08:11 kleink Exp $
 # New ports collection Makefile for: ctwm
 # Version required:	3.4pl2
 # Date created:         30th November 1997
 # Whom:                 tron
 #
+# $NetBSD: Makefile,v 1.3 1998/01/25 00:00:18 hubertf Exp $
+#
 
-DISTNAME=	ctwm-3.4pl2
-CATEGORIES=	x11
-MASTER_SITES=	ftp://ftp.x.org/contrib/window_managers/ \
-		ftp://ftp.uni-paderborn.de/Mirrors/ftp.x.org/contrib/window_managers/
+DISTNAME=		ctwm-3.4pl2
+CATEGORIES=		x11
+MASTER_SITES=		${MASTER_SITE_XCONTRIB}
+MASTER_SITE_SUBDIR=	window_managers
 
-LIB_DEPENDS=	Xpm\\.4\\.:${PORTSDIR}/graphics/xpm
+MAINTAINER=		packages@netbsd.org
 
-USE_IMAKE=	yes
-USE_X11=	yes
+LIB_DEPENDS=		Xpm\\.4\\.:${PORTSDIR}/graphics/xpm
+
+USE_IMAKE=		yes
 
 .include <bsd.port.mk>
