--- a/x11/sunclock/Makefile
+++ b/x11/sunclock/Makefile
@@ -3,16 +3,16 @@
 # Date created:				Sun Dec 14 00:47:27 GMT 1997
 # Whom:					Alistair Crooks (agc@netbsd.org)
 #
-# $NetBSD: Makefile,v 1.1 1997/12/14 01:24:31 agc Exp $
+# $NetBSD: Makefile,v 1.2 1998/01/25 00:14:05 hubertf Exp $
 #
 
 DISTNAME=	sunclock1.3
 PKGNAME=	sunclock-1.3
+NO_WRKSUBDIR=	yes
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XCONTRIB}
 MASTER_SITE_SUBDIR=	applications
 EXTRACT_SUFX=	.tar.Z
-NO_WRKSUBDIR=	yes
 
 MAINTAINER=	agc@netbsd.org
 
