--- a/x11/xautolock/Makefile
+++ b/x11/xautolock/Makefile
@@ -1,9 +1,9 @@
-# Port makefile for:	xautolock
+# Ports collection makefile for:	xautolock
 # Version required:	1pl10
 # Date created:		20 Jul 1996
 # Whom:			Eric Blood <eblood@cs.unr.edu>
 #
-# $NetBSD: Makefile,v 1.3 1998/01/20 11:18:15 agc Exp $
+# $NetBSD: Makefile,v 1.4 1998/01/25 00:29:25 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.2 1996/11/18 09:55:42 asami Exp
 #
 
