--- a/x11/xless/Makefile
+++ b/x11/xless/Makefile
@@ -3,17 +3,18 @@
 # Date created:		23 December 1996
 # Whom:			Conrad Sabatier <conrads@neosoft.com>
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/11 21:55:10 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1998/01/25 00:39:15 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.2 1996/12/29 00:51:27 obrien Exp
 #
-      
+
 DISTNAME=	xless-1.7
-CATEGORIES=	misc	
+CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_XCONTRIB} \
 		ftp://ftp.cs.berkeley.edu/ucb/people/dglo/xless/
 MASTER_SITE_SUBDIR=     applications
 
 MAINTAINER=	conrads@neosoft.com
-      
+
 USE_IMAKE=	yes
-      
+
 .include <bsd.port.mk>
