--- a/x11/xtimer/Makefile
+++ b/x11/xtimer/Makefile
@@ -3,7 +3,8 @@
 # Date created:		05 Apr 1997
 # Whom:			candy@fct.kgc.co.jp
 #
-# $Id: Makefile,v 1.2 1997/10/27 01:58:11 hubertf Exp $
+# $NetBSD: Makefile,v 1.3 1998/01/25 00:53:16 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.2 1997/06/15 10:44:39 asami Exp
 #
 
 DISTNAME=	xtimer-8087
