--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.5 1998/01/09 10:07:23 agc Exp $
+# $NetBSD: Makefile,v 1.6 1998/01/27 16:58:19 agc Exp $
 # FreeBSD Id: Makefile,v 1.18 1997/05/16 01:42:31 asami Exp 
 #
 
     SUBDIR += arc
-    SUBDIR += bzip
+#    SUBDIR += bzip
     SUBDIR += bzip2
     SUBDIR += freeze
 #    SUBDIR += gshar+gunshar
